corrected spacing for movie list on mobile

--- a/front-end/src/views/MovieList/MovieList.view.css
+++ b/front-end/src/views/MovieList/MovieList.view.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .movieList .navLink {
@@ -70,6 +71,7 @@
     
     .movieList {
         margin-left: 25px;
+        justify-content: initial;
     }
 
     .lip {
